--- a/Rocky/Views/Category/Create.cshtml
+++ b/Rocky/Views/Category/Create.cshtml
@@ -2,6 +2,7 @@
 
 <form method="post" asp-action="Create">
     <div class="border p-3">
+        @* <div asp-validation-summary="ModelOnly"></div> *@
         <div class="form-group row">
             <div class="col">
                 <h2 class="text-info pl-3">
@@ -15,6 +16,7 @@
             </div>
             <div class="col-5">
                 <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group row p-2 ">
@@ -23,6 +25,7 @@
             </div>
             <div class="col-5">
                 <input asp-for="DisplayOrder" class="form-control" />
+                <span asp-validation-for="DisplayOrder" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group offset-2 row">
@@ -35,3 +38,11 @@
         </div>
     </div>
 </form>
+
+@section Scripts {
+
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+
+ }
