--- a/Rocky/Views/ApplicationType/Delete.cshtml
+++ b/Rocky/Views/ApplicationType/Delete.cshtml
@@ -1,30 +1,30 @@
 ﻿@model Rocky.Models.ApplicationType
 
-<form method="post" asp-action="Create">
+<form method="post" asp-action="DeletePost">
+    <input asp-for="Id" hidden />
     <div class="border p-3">
         <div class="form-group row">
             <div class="col">
                 <h2 class="text-info pl-3">
-                    Add Application Type
+                    Delete Application Type
                 </h2>
-            </div>          
+            </div>
         </div>
         <div class="form-group row p-2 ">
             <div class="col-2">
                 <label asp-for="Name"></label>
             </div>
             <div class="col-5">
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <input asp-for="Name" disabled class="form-control" />
             </div>
         </div>
         <div class="form-group offset-2 row">
             <div class="col-3">
-                <input type="submit" class="btn btn-info w-100" value="Create" />
+                <input type="submit" class="btn btn-danger w-100" value="Delete" />
             </div>
             <div class="col-3">
-                <a asp-action="Index" class="btn btn-success w-100"><i class="fas fa-sign-out-alt"></i>Back</a>
-            </div>           
+                <a asp-action="Index" class="btn btn-success w-100"><i class="fa-solid fa-right-from-bracket"></i>Back</a>
+            </div>
         </div>
     </div>
 </form>
