--- a/Rocky/Views/ApplicationType/Edit.cshtml
+++ b/Rocky/Views/ApplicationType/Edit.cshtml
@@ -1,13 +1,14 @@
 ﻿@model Rocky.Models.ApplicationType
 
-<form method="post" asp-action="Create">
+<form method="post">
+    <input asp-for="Id" hidden />
     <div class="border p-3">
         <div class="form-group row">
             <div class="col">
                 <h2 class="text-info pl-3">
-                    Add Application Type
+                    Edit Application Type
                 </h2>
-            </div>          
+            </div>
         </div>
         <div class="form-group row p-2 ">
             <div class="col-2">
@@ -20,11 +21,11 @@
         </div>
         <div class="form-group offset-2 row">
             <div class="col-3">
-                <input type="submit" class="btn btn-info w-100" value="Create" />
+                <input type="submit" class="btn btn-info w-100" value="Update" />
             </div>
             <div class="col-3">
-                <a asp-action="Index" class="btn btn-success w-100"><i class="fas fa-sign-out-alt"></i>Back</a>
-            </div>           
+                <a asp-action="Index" class="btn btn-success w-100"><i class="fa-solid fa-right-from-bracket"></i>Back</a>
+            </div>
         </div>
     </div>
 </form>
@@ -36,3 +37,4 @@
     }
 
  }
+
