Added display of all products on the main page of the store

--- a/Rocky/Views/Shared/_Layout.cshtml
+++ b/Rocky/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link link-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown
+                                Content Management
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Category</a></li>
